syntax = "proto3";

package wireguardianpb;

option go_package = "wireguardianpb;wireguardianpb";

message Cluster {
  repeated Node control_plane = 2;
  repeated Node compute_plane = 3;
  string kubernetes_version = 4;
}

message Node {
  string public_ip = 1;
  string private_ip = 2;
}

message Status { bool success = 1; }

service BuildVPNService { rpc BuildVPN(Cluster) returns(Status); }
